feat/added-home-page

--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@
     --popover: 28 46.8% 7.15%;
     --popover-foreground: 28 9.1% 97.75%;
 
-    --primary: 85 54% 51%;
-    --primary-light: 85 54% 71%;
+    --primary: 203, 92%, 47%;
+    --primary-light: 203, 89%, 53%;
     --primary-foreground: 0 85.7% 97.3%;
 
     --secondary: 0 0% 6%;
